<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">x$pend</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Closed</string>    
    <string name="my_red">#CC0000</string>
    <string name="my_green">#00CC00</string>
    <string name="my_grey">#0C0C0C</string>
    
    <string name="homescreen_menuitem_settings">Settings</string>
    <string name="homescreen_menuitem_add">Add</string>
    <string name="homescreen_menuitem_add_tabs">Add Tab</string>
    <string name="homescreen_menuitem_add_expenses">Add Expense</string>
    <string name="homescreen_menuitem_schedule_task">Schedule Task</string>
    <string name="homescreen_menuitem_calender">Calender</string>
    
    <string name="fragment_textView_total_label">Total</string>
    <string name="collection_button_add_record">Add</string>
    <string name="collection_button_reset_input">Reset</string>
    <string name="collection_textView_note_label">Note</string>
    <string name="collection_editText_note">misc</string>
    <string name="collection_textView_amount_label">Amount</string>
    <string name="collection_editText_amount">0</string>

</resources>
