<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/homescreen_menuitem_settings"
        android:orderInCategory="100"
        android:title="@string/homescreen_menuitem_settings"
        android:showAsAction="never" >
    </item>
    
    <item 
        android:id="@+id/homescreen_menuitem_add"
		android:icon="@drawable/homescreen_menuitem_add"
		android:title="@string/homescreen_menuitem_add"
		android:showAsAction="always" >
        <menu>
            <item 
                android:id="@+id/homescreen_menuitem_add_tabs"
				android:icon="@drawable/homescreen_menuitem_add_tabs"
				android:title="@string/homescreen_menuitem_add_tabs"
				android:showAsAction="always" >
			</item>
            <item 
                android:id="@+id/homescreen_menuitem_add_expenses"
                android:icon="@drawable/homescreen_menuitem_add_expenses"
                android:title="@string/homescreen_menuitem_add_expenses"
                android:showAsAction="always" >
            </item>
        </menu>
    </item>
    
    <item 
        android:id="@+id/homescreen_menuitem_schedule_task"
		android:icon="@drawable/homescreen_menuitem_schedule_task"
		android:title="@string/homescreen_menuitem_schedule_task"
		android:showAsAction="always" >
	</item>
	
    <item 
        android:id="@+id/homescreen_menuitem_calender"
		android:icon="@drawable/homescreen_menuitem_calender"
		android:title="@string/homescreen_menuitem_calender"
		android:showAsAction="always" >
	</item>

</menu>
